2012-09-17  Ian Lance Taylor  <iant@google.com>

	* Initial implementation.